--- a/src/card/card.scss
+++ b/src/card/card.scss
@@ -1,8 +1,18 @@
 .card-generator {
   position: relative;
   width: 100%;
-  height: 100%;
+  padding-top: 70.9%;
+  // height: 70.9%;
   overflow: hidden;
+  position: relative;
+
+  .inner-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
   .background-layer {
     position: absolute;
@@ -15,9 +25,22 @@
     position: absolute;
     border-radius: 10px;
     filter: drop-shadow(0px 2px 6px rgba(0, 0, 0, 0.25));
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     object-fit: cover;
     background-position: center;
     background-size: cover;
+    
+
+    span.add-image {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      cursor: pointer;
+      &:hover {
+        color: green;
+      }
+    }
 
     &.album {
       width: 52vw;
@@ -88,7 +111,7 @@
     font-size: 30px;
     line-height: 34px;
 
-    >div:nth-child(2) {
+    > div:nth-child(2) {
       display: flex;
       align-items: center;
 
