--- a/src/app/create-pdf-card-flow/card.scss
+++ b/src/app/create-pdf-card-flow/card.scss
@@ -1,10 +1,8 @@
 .card-generator {
   position: relative;
   width: 100%;
-  max-width: 1360px;
   margin: 0 auto;
   padding-top: 70.9%;
-  // height: 70.9%;
   overflow: hidden;
   position: relative;
 
@@ -45,8 +43,8 @@
     }
 
     &.album {
-      width: 52vw;
-      height: 37vw;
+      width: 50%;
+      height: 50%;
       top: 50%;
       left: 50px;
       transform: translate(0, -65%) rotate(7deg);
@@ -65,8 +63,8 @@
     }
 
     &.square {
-      width: 43vw;
-      height: 43vw;
+      width: 44%;
+      height: 62%;
       top: 50%;
       left: 110px;
       transform: translate(0, -65%) rotate(7deg);
@@ -85,8 +83,8 @@
     }
 
     &.portrait {
-      width: 36vw;
-      height: 50vw;
+      width: 36%;
+      height: 70%;
       top: 50%;
       right: 115px;
       transform: translate(0, -47%) rotate(-7deg);
